--- a/resource/css/base.css
+++ b/resource/css/base.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -148,6 +149,7 @@ a, button {
   -webkit-appearance: none;
 }
 
+/* //reset */
 /* color */
 /* //color */
 /* mixins */
