--- a/resource/scss/base.scss
+++ b/resource/scss/base.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+/* reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -91,7 +92,7 @@ a, button {
     -webkit-tap-highlight-color: transparent;
     -webkit-appearance: none;
   }
-  
+/* //reset */
 
 /* color */
 
